--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -28,6 +28,7 @@ img {
 }
 
 .form {
+    position: fixed;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -66,6 +67,7 @@ img {
 }
 
 .gallery {
+    margin-top: 70px;
     @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
@@ -96,7 +98,7 @@ img {
         }
     
         @media screen and (min-width: 1200px) {
-            flex-basis: calc((100% - 60px) / 3);
+            flex-basis: calc((100% - 90px) / 4);
 }
 }
 
@@ -110,7 +112,7 @@ img {
     display: flex;
     flex-direction: column;
 align-items: center;
-    font-size: 15px;
+    font-size: 14px;
 }
 b{
     color: #249b81;
