--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -132,3 +132,7 @@ b{
         border-radius: 4px;
         margin: 25px auto 0 auto;
 }
+.load-btn:hover {
+    box-shadow: 0 2px 4px rgba(50, 50, 50, 0.5);
+    background-color: #1fb393;
+}
